--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,10 +1,56 @@
 header{
-    height: 100vh;
     background-color: white;
-    width: 100px;
-    border-right: 1px solid #e1e1e1;
     position: fixed;
     left: 0;
+    z-index: 9999;
+    ul.menu{
+        width: 100%;
+        li{
+            a{
+                font-size: 22px;
+                
+                color: black;
+                display: inline-block;
+                width: 100%;
+
+            }
+
+        }
+    }
+    ul.social-icons{
+        width: 100%;
+        display: flex;
+        li{
+            margin-right: 20px;
+            a{
+                font-size: 20px;
+                color: black;
+                font-weight: bold;
+                transition: all .3s ease;
+                display: inline-block;
+                &:hover{
+                    transform: translateY(-3px);
+                }
+            }
+        }
+    }
+}
+#large-screens{
+    height: 100vh;
+    width: 100px;
+    .overlay{
+        height: 100vh;
+        background-color: white;
+        width: 100px;
+        position: fixed;
+        left: 0;
+        z-index: 5;
+        border-right: 1px solid #e1e1e1;
+        transition: all .3s ease;
+    }
+    .overlay.active{
+        border-color: transparent;
+    }
     .logo{
         padding: 30px 10px;
     }
@@ -17,23 +63,19 @@ header{
     nav{
         position: absolute;
         top: 0;
-        width: 400px;
+        width: 300px;
         height: 100vh;
-        left: -500px;
-        padding: 0px 20px;
-        transition: all .3s ease;
-        ul{
+        left: -200px;
+        transition: all .2s ease;
+        z-index: 4;
+        background-color: white;
+        ul.menu{
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            width: 100%;
             li{
                 a{
-                    font-size: 22px;
                     font-weight: bold;
-                    color: black;
-                    display: inline-block;
-                    width: 100%;
                     span{
                         position: relative;
                         letter-spacing: 0px;
@@ -65,11 +107,32 @@ header{
                 }
             }
         }
+        ul.social-icons{
+            position: absolute;
+            left: 0;
+            bottom: 50px;
+        }
     }
     nav.active{
         left: 100px;
     }
 }
-header.active{
-    border-color: transparent;
+#small-screens{
+    width: 100%;
+    top: 0;
+    padding: 10px 0;
+    border-bottom: 1px solid #e1e1e1;
+    .logo{
+        a{
+            img{
+                height: 60px;
+            }
+        }
+    }
+    nav .menu a{
+        font-weight: 600;
+        border-bottom: 1px solid #e1e1e1;
+        padding: 5px 0;
+        font-size: 20px;
+    }
 }
